# tibiantis-scraper

./: .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROGRESS.md  README.md  SCHEDULER_README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  run.py  scrapy.cfg
.github/issue-bodies/: m4-d18.md  m4-d19.md  m4-d20.md  m4-d21.md  m4-d22.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 002d68c9854a_create_characters_table.py  027e1422f89b_add_bedmages.py  8626a97096f1_added_ne_table_bedmages.py  ab4ae06c9a62_first_init.py
app/: config.py  main.py
app/db/: session.py
app/db/models/: __init__.py  bedmage_character.py  character.py
app/routes/: bedmage_routes.py  character_routes.py
app/schemas/: __init__.py  bedmage.py  character.py  death.py
app/scraper/: tibiantis_scraper.py
app/services/: bedmage_service.py  character_service.py
app/utils/: db_utils.py  di_container.py  error_handlers.py  scheduler.py  service_provider.py
apps/accounts/: admin.py  models.py  schema.py
apps/accounts/api/: serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_discord_id.py
apps/characters/: admin.py  apps.py  models.py  schema.py  services.py  tasks.py  types.py
apps/characters/management/commands/: scrape_character.py
apps/characters/migrations/: 0001_initial.py  0002_remove_character_characters__name_6d8b81_idx.py  0003_seed_default_periodic_task.py
apps/deaths/: admin.py  apps.py  models.py  services.py
apps/deaths/migrations/: 0001_initial.py
config/: celery.py  schema.py  urls.py  views.py
config/settings/: base.py  dev.py  stubs.py
docs/: plan.md  tasks.md
docs/superpowers/plans/: 2026-04-17-m0-m1-implementation-plan.md  2026-04-30-m4-implementation-plan.md
docs/superpowers/specs/: 2026-04-17-tibiantis-execution-plan-design.md  2026-04-22-m2-auth-graphql-fundament-design.md  2026-04-28-m3-celery-fundament-design.md  2026-04-30-m4-deaths-monitor-design.md
scrapers/tibiantis_scrapers/: items.py  pipelines.py  settings.py
scrapers/tibiantis_scrapers/spiders/: character_spider.py  deaths_spider.py
tests/: conftest.py  test_character_online_function.py  test_login_time_feature.py  test_routes.py  test_scraper.py  test_scraper_chcracter_list.py  test_service.py
tests/fixtures/: character_yhral.html  deaths_sample.html
tests/integration/: test_celery_e2e.py  test_m2_e2e.py
tests/unit/accounts/: test_graphql_async_canary.py  test_graphql_jwt_auth.py  test_graphql_me.py  test_login_api.py  test_logout_api.py  test_refresh_api.py  test_register_api.py
tests/unit/characters/: test_character_model.py  test_character_service.py  test_graphql_character.py  test_tasks.py
tests/unit/scrapers/: test_character_spider.py  test_character_spider_regressions.py  test_deaths_spider.py  test_pipeline.py
