[project]
name = "tibantis-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "bgozlinski",email = "bartlomiej.gozlinski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
  dependencies = [
      "django (>=6.0.4,<7.0.0)",
      "django-environ (>=0.13.0,<0.14.0)",
      "psycopg[binary] (>=3.2,<4.0)",
      "django-stubs-ext (>=6.0.2,<7.0.0)",
      "scrapy (>=2.15.0,<3.0.0)",
      "crochet (>=2.1.1,<3.0.0)",
      "djangorestframework (>=3.17.1,<4.0.0)",
      "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
      "strawberry-graphql-django (>=0.82.1,<0.84.0)",
      "django-choices-field (>=4.0.0,<5.0.0)",
      "celery (>=5.6.3,<6.0.0)",
      "redis (>=7.4.0,<8.0.0)",
      "django-celery-beat (>=2.9.0,<3.0.0)"
  ]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-django = ">=4.12.0,<5.0.0"
ipython = ">=9.12.0,<10.0.0"
pre-commit = ">=4.5.1,<5.0.0"
ruff = ">=0.15.11,<0.16.0"
mypy = ">=1.20.1,<2.0.0"
django-stubs = ">=6.0.2,<7.0.0"
djangorestframework-stubs = ">=3.16.9,<4.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
pytest-asyncio = "^1.3.0"


[tool.ruff]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["scrapers/"]

[[tool.mypy.overrides]]
module = "apps.*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["scrapers", "scrapers.*"]
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["environ"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "apps.accounts.admin"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.stubs"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
testpaths = ["tests"]
asyncio_mode = "auto"
